# Simple-Alternative-Trading-System

./: .gitignore  CMakeLists.txt  Progress Log.md  README.md  TODO.txt  WATS Architecture Overview.docx  matchingEngine.cpp  matchingEngine.h  order.cpp  order.h  orderQueue.cpp  orderQueue.h  pitchMessage.cpp  pitchMessage.h  pitchMsgFactory.cpp  pitchMsgFactory.h  ~$TS Architecture Overview.docx
Diagrams/: Add Order Ingestion.drawio.html  Cancel Order Ingestion.drawio.html  WATS Architecture.drawio.html
dataService/: dataService.cpp  dataService.h
engineRouter/: engineRouter.cpp  engineRouter.h
matchingEngine/: matchingEngine.cpp  matchingEngine.h
order/: order.cpp  order.h
pitchMessage/: pitchMessage.cpp  pitchMessage.h  pitchMsgFactory.cpp  pitchMsgFactory.h
sim/: sim.cpp
test/: matchingEngineTest.cpp  pitchMessageTest.cpp
traderPool/: traderBot.cpp  traderBot.h  traderPool.cpp  traderPool.h
